--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -30,11 +30,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifact
+      - name: Download
         uses: actions/download-artifact@v3
         with:
           name: tread-${{ github.ref_name }}
-      - name: Create GitHub Release
-        uses: actions/create-release@v1
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
+          files: tread-${{ github.ref_name }}.zip
