--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -38,3 +38,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: tread-${{ github.ref_name }}.zip
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
